fix taxonomy kind

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://example.com/"
 languageCode = "zh-cn"
 title = "Tom"
-disableKinds = ["taxonomy", "taxonomyTerm"]
+disableKinds = ["taxonomy", "term"]
 
 [params]
   tagline_zh = "简洁双语个人主页"
