--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,8 @@ disableKinds = ["taxonomy", "term"]
   tagline_en = "A clean, bilingual personal page"
   email = "you@example.com"
   github = "https://github.com/yourname"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
